--- a/javascript_studio/style.css
+++ b/javascript_studio/style.css
@@ -1,9 +1,12 @@
 * {
     box-sizing: border-box;
+    overflow: hidden;
   }
 
 html {
-    cursor: url(Cursor79.cur), default;
+    cursor: url(wii_cursor.cur), default;
+    cursor: url(wii_cursor.cur), pointer;
+
 }
 
 button, input[type="submit"], input[type="reset"] {
@@ -33,24 +36,45 @@ a {
     height: 100%;
   }
   
-  .left {
+.left {
     /* width: 70%; */
     height: 100%;
     position: relative;
     width:100%;
     text-align: center; 
+    /* background-repeat: repeat; */
+    overflow-x: hidden;
     /* flex-direction: wrap; */
+    background-color: rgb(239, 239, 239);
   }
   
 h1 {
-    font-size: 80px;
+    /* font-size: 80px; */
+    font-size: 60px;
     text-align: center;
+    font-family: 'Menlo', Courier, monospace;
+    /* background-image: url(background.jpg); */
 }
 
 h2 {
     font-family: 'Menlo', Courier, monospace;
     font-size: 40px;
+}
 
+h3 {
+    background-color: #2800dc;
+    border-radius: 2em;
+    width:fit-content;
+    color: #fff;
+    padding: 0.5em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.center {
+    text-align: center;
+    justify-content: center; 
 }
 
 h2:hover {
@@ -118,44 +142,48 @@ html, body, .row, .column, .right {
     font-weight: bold;
     display: flex;
     justify-content: center;
-    font-size: 40px;
+    font-size: 100px;
     padding: 10px;
+    cursor: url(wii_cursor.cur), pointer;
 }
 
 #one:after{
     content:'';
 }
 #one:hover:after{
-    content:'';
+    content:'';
+    cursor: url(wii_cursor.cur), pointer;
 }
 
 #two:after{
     content:'';
 }
 #two:hover:after{
-    content:'';
+    content:'';
+    cursor: url(wii_cursor.cur), pointer;
 }
 
 #three:after{
     content:'';
 }
 #three:hover:after{
-    content:'';
+    cursor: url(wii_cursor.cur), pointer;
+    content:'';
 }
 
 :hover#one, :hover#two, :hover#three {
     color: #2800dc;
+    cursor: url(wii_cursor.cur), pointer;
 }
 
 #mydiv {
     position: absolute;
-    
-    left: 25%;
-    z-index: 9;
+    margin-left: auto;
+  margin-right: auto;
+    z-index: 777;
     text-align: center;
     box-shadow: 0px 0px 10px 10px #2800dc;
     border-radius: 5px;
-    color: #fff;
     opacity: 90%;
     font-family: 'Menlo', Courier, monospace;
     font-size: 14px;
@@ -166,7 +194,7 @@ html, body, .row, .column, .right {
     cursor: move;
     z-index: 10;
     /* background-color: #2800dc; */
-    color: #fff;
+    color: #2800dc;
     width: 180px;
   }
 
@@ -179,16 +207,97 @@ html, body, .row, .column, .right {
     color: #fff; */
 }
 
+/* .circle2 {
+    position: absolute;
+    width: 100%;
+    height: 2em;
+    background-color: #2800dc;
+    z-index: 777777;
+} */
+
+/* .circle1 {
+    width: 100px;
+    height: 100px;
+    box-shadow: 0px 0px 10px 10px #2800dc;
+    border-radius: 200px;
+    border: 10px;
+} */
+
 @media only screen and (max-width: 640px) {
+
+* {
+    overflow: visible;
+    
+}
 
 html, body, .row, .column, .right {
         height: 100%;
+        overflow: visible;
+        width: 100%;
     }
 
 header {
-        background-color: #2800dc;
+        /* background-color: #2800dc; */
         width: 100%;
         height: 2em;
         z-index: 100;
     }
+
+.project {
+    /* border-top: 5px solid #2800dc; */
+    border-top: 5px solid #2800dc;
 }
+
+.row {
+    display: grid;
+    position: absolute;
+}
+
+/* .row > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-top: 5px solid #2800dc;
+    padding: 1em;
+    font-size: 30px;
+    position: relative;
+} */
+
+.column {
+    /* float: left; */
+    position: relative;
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+  }
+
+#right {
+    /* width: 30%; */
+    display: visible;
+    position: relative;
+    width: 10px;
+    top: 30%;
+  }
+
+.text {
+    width: 300px;
+    /* background-color: aquamarine; */
+}
+
+h2 {
+    font-size: 30px; 
+    width: 300px; 
+}
+
+#send {
+    height: 20px;
+}
+
+#gen {
+    height: 20px;
+}
+
+#changing {
+    height: 20px;
+    /* height: 43em; */
+}
+}
+
