--- a/javascript_studio/style.css
+++ b/javascript_studio/style.css
@@ -1,12 +1,12 @@
 * {
     box-sizing: border-box;
     overflow: hidden;
+    /* background-color: rgb(239, 239, 239); */
   }
 
 html {
     cursor: url(wii_cursor.cur), default;
     cursor: url(wii_cursor.cur), pointer;
-
 }
 
 button, input[type="submit"], input[type="reset"] {
@@ -53,12 +53,14 @@ h1 {
     font-size: 60px;
     text-align: center;
     font-family: 'Menlo', Courier, monospace;
+    z-index: 777;
     /* background-image: url(background.jpg); */
 }
 
 h2 {
     font-family: 'Menlo', Courier, monospace;
     font-size: 40px;
+    background-color: #fff;
 }
 
 h3 {
@@ -86,6 +88,7 @@ h2:hover {
     /* width: 30%; */
     display: none;
     position: relative;
+    background-color: #fff;
   }
 
 html, body, .row, .column, .right {
@@ -126,14 +129,41 @@ html, body, .row, .column, .right {
     src: local('Wingding'), url('wingding.woff') format('woff');
     }
 
+.star {
+    color:#2800dc;
+    position: relative;
+    font-family: "Wingding", serif;
+    font-size: 200px;
+    top: 40px;
+    /* -webkit-animation:spin 50s linear infinite;
+    -moz-animation:spin 50s linear infinite;
+    animation:spin 50s linear infinite; */
+}
+
+@-moz-keyframes spin { 
+    100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+    100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin { 
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
+}
+
 .title {
     position: relative;
-    top: 265px;
+    top: 2px;
 }
 
 .project {
     position: absolute;
     width: 100%;
+    background-color: aliceblue;
+    padding-left: 10px;
+    padding-right: 0.5em;
     /* display: none; */
 }
 
@@ -176,26 +206,35 @@ html, body, .row, .column, .right {
     cursor: url(wii_cursor.cur), pointer;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
 #mydiv {
     position: absolute;
-    margin-left: auto;
-  margin-right: auto;
-    z-index: 777;
+    z-index: 99;
     text-align: center;
     box-shadow: 0px 0px 10px 10px #2800dc;
+    background-color: #2800dc;
     border-radius: 5px;
     opacity: 90%;
     font-family: 'Menlo', Courier, monospace;
     font-size: 14px;
+    left:2%;
+    bottom:3%;
+    max-height: min-content;
   }
   
   #mydivheader {
     position: relative;
     cursor: move;
-    z-index: 10;
+    z-index: 100;
+    background-color: #2800dc;
     /* background-color: #2800dc; */
-    color: #2800dc;
-    width: 180px;
+    color: #ffffff;
+    text-align: center;
+    width: 250px;
   }
 
 .text {
@@ -203,6 +242,8 @@ html, body, .row, .column, .right {
     padding: 30px;
     font-size: 14px;
     min-height: 100%;
+    background-color: #fff;
+    
     /* background-color: #2800dc;
     color: #fff; */
 }
@@ -227,6 +268,7 @@ html, body, .row, .column, .right {
 
 * {
     overflow: visible;
+    background-color: #fff;
     
 }
 
@@ -234,13 +276,7 @@ html, body, .row, .column, .right {
         height: 100%;
         overflow: visible;
         width: 100%;
-    }
-
-header {
-        /* background-color: #2800dc; */
-        width: 100%;
-        height: 2em;
-        z-index: 100;
+        background-color: #fff;
     }
 
 .project {
@@ -274,11 +310,12 @@ header {
     display: visible;
     position: relative;
     width: 10px;
-    top: 30%;
+    top: 80%;
   }
 
 .text {
     width: 300px;
+    background-color: white;
     /* background-color: aquamarine; */
 }
 
@@ -299,5 +336,30 @@ h2 {
     height: 20px;
     /* height: 43em; */
 }
+
+.star {
+    position: relative;
+    font-size: 60px;
+    text-align: right;
+    margin-right: 10%;
+}
+
+.title {
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+#mydiv {
+    position: relative;
+    max-width: min-content;
+    top:4%;
+    font-size: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  #mydivheader {
+    width: 160px;
+  }
 }
 
